# lab4

./: CMakeLists.txt  DoctorList.cpp  DoctorList.h  ReceptionList.cpp  ReceptionList.h  date.cpp  date.h  doctor.cpp  doctor.h  fio.cpp  fio.h  funcs.cpp  funcs.h  main.cpp  main.h  reception.cpp  reception.h
